...
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    tools:context=".ThankYouActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thank_you_message"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
...
    <!-- RecyclerView to display reservations -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/messageTextView"
        app:layout_constraintBottom_toTopOf="@id/returnButton"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />



    <!-- Return Button -->
...
