...
    android:background="@drawable/bg_gradient">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewReservations"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/button_reservation"
        app:layout_constraintTop_toBottomOf="@id/image_logo" />

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="400dp"
        android:layout_height="400dp"
...
